--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,277 @@
-body{
-    margin: 0px;
-
-}
-/*-----Background Image ---------------*/
-#body-header{
-    background-image: url(images/laptop-image.jpg);
-    height: 65vh;
-    background-size: cover;
-    background-position: left;
-    opacity: 0.8;
-    background-attachment: fixed;
+body {
+    margin: 20px;
+    font-family: sans-serif;
+    font-size: 25px;
+    color: white;
+    background-color: blueviolet;
 }
 
-/*--------Horizontal-Lists-----------*/
-.horizontal-list{
-    list-style-type: none;
-    margin: 0;
-    padding:0;
-    
-}
-.horizontal-list li{
-    display:inline-block;
-    margin: 0px 8px 8px 0px;
-    
-}
-.horizontal-list li a{
-    color: black;
-    text-decoration: none;
-    padding: 16px;
-    transition:color 5s,border-bottom 4s;
+/*---header--*/
+
+#body-header {
+    height: 30vh;
+    padding-top: 1.2rem;
 }
 
-.horizontal-list li a:hover{
-    color: red;
-    border-bottom: 1px solid white;
+.header-container {
+    display: flex;
+    /* border: 2px solid black; */
+    height: inherit;
+    width: 100%;
+    height: 80px;
 }
-.text-center{
+
+.header-first-container {
+     /* border: 2px solid black;  */
+    display: flex;
+    width: 26%;
+    /* margin-right: 50px; */
+    align-items: center;
+}
+
+.header-first-container div {
+    /* border: 2px solid black; */
+    width: 33%;
+}
+
+.header-first-container img {
+    border-radius: 50%;
+    height: 80%;
+    width: 70%;
+}
+
+.header-first-container span {
+    font-size: 25px;
+
+}
+
+.fav-text {
+    margin-top: 20px;
+    margin-right: 450px;
+}
+
+.header-searchbar {
+    display: flex;
+    width: 30%;
+    width: 50%;
+    /* border: 2px solid black; */
+    align-items: center; 
+    /* position: relative; */
+}
+
+.header-searchbar .search {
+    width: 70%;
+     /* border: 2px solid black;  */
+
+}
+
+.header-searchbar .search {
+    width: 100%; 
+
+    /* padding: 5px; */
+
+}
+
+.header-searchbar .searchButton {
+    width: 30px;
+    height: 34px;
+    background: white;
     text-align: center;
+    /* border: solid 1px black; */
+    border-width: 1px 0 1px 1px;
+    margin-right: -5px;
+    border-color: black;
+    border-radius: 10px 0 0 10px;
+    background-color: transparent;
+    color: white;
+
 }
+
+.header-searchbar .recordButton {
+    width: 30px;
+    height: 34px;
+    border-width: 1px 1px 1px 0;
+    margin-left: -13px;
+    
+    text-align: center;
+    border-color: black;
+    border-radius: 0 10px 10px 0;
+    background-color: transparent;
+    color: white;
+}
+
+.header-searchbar input {
+
+    height: 30px;
+    margin-left: -10px;
+    outline: 0;
+    border-width: 1px 0px 1px 0;
+    border-color: black;
+    background-color: transparent;
+    /* border:1px solid black; */
+    
+}
+
+.header-searchbar .notification{
+    
+    text-align: center;
+   
+}
+
+.header-searchbar .profileimage{
+    height: 100%;
+    width: 100%;
+   
+
+}
+
+.header-searchbar .profileimage img{
+    height: 80px;
+    width: 80px;
+    border-radius:50% ;
+    margin-left: 60px;
+   
+}
+
+main{
+    width: 70%;
+    display: inline-block;
+    border: 2px solid black;
+    height: 1600px;
+}
+
+/*--Album--*/
+
+.album-container{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    border: 2px solid black;
+}
+
+.album-container img{
+    width: 33%;
+    height: inherit;
+}
+
+/*--Latest release--*/
+
+.latest-release{
+    display:flex;
+    margin: 10px;
+    border: 2px solid black;
+    width: 900px;
+    height:400px;
+}
+
+.release-container{
+    display: flex;
+    margin: 10px;
+    /* border: 2px solid black; */
+    width: 900px;
+    height: 300px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+}
+
+.release-container div{
+    /* border:2px solid black; */
+    width: 350px;
+    height: 130px;
+}
+
+.release-container .music-container{
+    display:flex;
+    
+}
+
+.release-container .music-container div{
+    /* border: 2px solid black; */
+    width: 85px;
+    height: 100%;
+}
+
+.release-container .music-container div img{
+    height: 80px;
+    width: inherit;
+}
+
+.release-container .music-container div span{
+    
+    font-size: 15px;
+}
+
+.release-container .music-container .push{
+    /* display: flex;
+    flex-direction:column; */
+
+    
+    margin-left: auto;
+}
+.release-container .music-container .push span{
+    margin-left: 25px;
+}
+
+
+
+.release-container .music-container .music-name span{
+    margin: 20px;
+    text-align: justify;
+}
+
+/*---Popular Artist---*/
+
+.artist{
+    display:flex;
+    margin: 10px;
+    /* border: 2px solid black; */
+    width: 900px;
+    height:200px;
+}
+
+.artist div{
+    width: 225px;
+    height: 190px;
+    /* border: 2px solid black; */
+}
+
+.artist div img{
+    border-radius: 50%;
+    width: 200px;
+    height: 160px;
+}
+
+.artist div  span{
+    text-align: center;
+    margin-left: 55px;
+}
+
+/*---Music Stations---*/
+
+.station-container{
+    display: flex;
+    width: 900px;
+    height:200px;
+    background-color: brown;
+}
+
+.station-container div{
+    width: 225px;
+    height: 190px;
+    border: 2px solid black; 
+}
+
+.station-container div>img{
+    width: 200px;
+    height: 160px;
+
+}
+
+.station-container div img{
+    border-radius: 50%;
+    width: 200px;
+    height: 160px;
+}
+
+
