--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,14 @@ body {
     font-family: sans-serif;
     font-size: 25px;
     color: white;
-    background-color: blueviolet;
+    background-image:linear-gradient(to left, MidnightBlue, #093e79);    
+    overflow: scroll;
+    background: #EDEBED url(to left, MidnightBlue, #093e79);
 }
+
+body:not(.loaded) #slider img {
+    display:none;
+  }
 
 /*---header--*/
 
@@ -47,7 +53,7 @@ body {
 
 .fav-text {
     margin-top: 20px;
-    margin-right: 450px;
+    margin-right: 300px;
 }
 
 .header-searchbar {
@@ -59,14 +65,16 @@ body {
     /* position: relative; */
 }
 
-.header-searchbar .search {
+/* .header-searchbar .search {
     width: 70%;
+    flex-grow: 1;
      /* border: 2px solid black;  */
 
-}
+
 
 .header-searchbar .search {
     width: 100%; 
+    flex-grow: 1;
 
     /* padding: 5px; */
 
@@ -82,7 +90,7 @@ body {
     margin-right: -5px;
     border-color: black;
     border-radius: 10px 0 0 10px;
-    background-color: transparent;
+    background-color: midnightblue;
     color: white;
 
 }
@@ -96,18 +104,19 @@ body {
     text-align: center;
     border-color: black;
     border-radius: 0 10px 10px 0;
-    background-color: transparent;
+    background-color: midnightblue;
     color: white;
 }
 
 .header-searchbar input {
 
     height: 30px;
+    width: 80%;
     margin-left: -10px;
     outline: 0;
     border-width: 1px 0px 1px 0;
     border-color: black;
-    background-color: transparent;
+    background-color:midnightblue;
     /* border:1px solid black; */
     
 }
@@ -120,7 +129,7 @@ body {
 
 .header-searchbar .profileimage{
     height: 100%;
-    width: 100%;
+    width: 30%;
    
 
 }
@@ -137,8 +146,11 @@ main{
     width: 70%;
     display: inline-block;
     border: 2px solid black;
-    height: 1600px;
+    height: 100%;
+    
 }
+
+
 
 /*--Album--*/
 
@@ -150,7 +162,7 @@ main{
 }
 
 .album-container img{
-    width: 33%;
+    width: 33.3%;
     height: inherit;
 }
 
@@ -249,20 +261,39 @@ main{
 
 /*---Music Stations---*/
 
+.different-stations{
+    margin-top: 1rem;
+}
+
 .station-container{
     display: flex;
-    width: 900px;
+    width: 100%;
     height:200px;
-    background-color: brown;
+    background-color: midnightblue;
+    
 }
 
 .station-container div{
     width: 225px;
     height: 190px;
-    border: 2px solid black; 
+    /* border: 2px solid black;  */
 }
 
-.station-container div>img{
+.station-container .different-stations{
+    position: relative;
+    text-align: center;
+}
+
+
+
+.station-container .different-stations div{
+    top: 50px;
+    left: 13px;
+    position: absolute;
+}
+
+.station-container  div:first-child img{
+    border-radius: 0%;
     width: 200px;
     height: 160px;
 
@@ -273,5 +304,279 @@ main{
     width: 200px;
     height: 160px;
 }
+
+/**---music-genre---*/
+
+.genre-container{
+
+    margin-top: 50px;
+    display: flex;
+    width: 100%;
+    height:200px;
+    justify-content: space-between;
+    /* border:2px solid black; */
+
+}
+
+.genre-container div{
+    width: 240px;
+    height: 190px;
+    /* border: 2px solid black;   */
+}
+
+.genre-container  div img{
+    
+    width: inherit;
+    height: inherit;
+
+}
+
+.genre-container .genre-stations{
+    position: relative;
+    text-align: center;
+
+} 
+
+.genre-container .genre-stations div{
+    top: 50px;
+    left: 13px;
+    position: absolute;
+    width: 290px;
+    height: 100px;
+}
+
+/*---English Music---*/
+
+#english-songs{
+    width: 100%;
+    height: 16%;
+    /* border:2px solid black; */
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+#english-songs .child{
+
+   
+    height: 5%;
+    width: 100%;
+    /* border:2px solid black; */
+    
+}
+
+ #english-songs .child{
+    height: 3rem;
+    width: 100%;
+} 
+
+/* #english-songs div:not(:first-child){
+    height: inherit;
+    width: 100%;
+} */
+
+ .song-list {
+    display: flex;
+    /* flex-direction: row; */
+    /* border: 2px solid white; */
+    height: 300px;
+    width: 100%;
+    margin-right: 20px;
+    justify-content: space-evenly;
+
+}
+
+.label-tile{
+    width: 33.3%;
+}
+
+.label-tile  img{
+    width: 80%;
+    height: 80%;
+}
+
+.label-tile span{
+    font-size: 15px;
+}
+
+/*---Aside---*/
+aside{
+
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 3%;
+    width: 25%;
+}
+
+.playlist-queue-container{
+    height: 800px;
+}
+
+
+.playlist-title-container{
+    display: flex;
+    /* border: 2px solid black; */
+    /* justify-content: space-between; */
+    
+}
+
+.playlist-title-container .child1{
+    padding: 5px 20px 20px 10px;
+    flex-grow: 2;
+}
+
+.playlist-title-container .child2{
+    flex-grow: 0.5;
+    padding:30px 10px 30px 30px;
+    font-size: 20px;
+    color: #047857;
+    
+
+}
+.playlist-title-container .child3{
+    padding: 30px 30px 30px 0px;
+    flex-grow: 0;
+    color: #047857;
+}
+
+.playlist-container{
+    display: flex;
+    /* border: 2px solid black; */
+    justify-content: start;
+    height: 60px;
+
+}
+
+.playlist-container span,img{
+    /* border: 1px solid black; */
+    font-size: 1rem;
+}
+
+.playlist-container span:first-child{
+    padding: 30px 5px;
+}
+
+.playlist-container span:last-child{
+    padding: 30px 5px;
+}
+
+
+
+.playlist-container img{
+    height: inherit;
+    width: 100px;
+}
+
+.playlist-text{
+    flex-grow: 1;
+}
+
+.playlist-queue-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/*---footer---*/
+
+footer{
+    width: 100%;
+    display: inline-block;
+    border: 2px solid black;
+    height: 100px;
+    background-color: grey;
+}
+
+.music-player{
+    display: flex;
+    border: 1px solid red;
+    height: 100%;
+
+}
+
+.music-player .active-song-description{
+    display: flex;
+}
+
+#song-image img{
+    width: 90px;
+    height: 100px;
+}
+
+.music-player .active-song-description span{
+    font-size: 15px;
+}
+
+/* .music-player div{
+     border: 2px solid black; 
+    width: 33%;
+
+} */
+
+.music-player .active-song-description{
+    width: 25%;
+    justify-content: space-between;
+}
+
+#song-text {
+    margin-top: 10px;
+}
+
+#song-icon{
+    margin-top: 10px;
+}
+
+.song-player{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+}
+
+#song-toggle{
+    display: flex;
+    justify-content: space-evenly; 
+    margin-left: 50px;
+    margin-right: 50px;
+
+}
+
+#song-toggle span{
+    font-size: 20px;
+    /* margin-left: 80px; */
+}
+
+#player-toggle{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+#player-toggle input{
+    flex-grow: 0.9;
+    background-color: lawngreen;
+}
+#player-toggle span{
+    flex-grow: 0;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+
+
+.song-player div{
+    border: 1px solid black;
+    height: 50%;
+}
+.music-toggle{
+    width: 25%;
+    margin-top: 35px;
+}
+
+
+
+
 
 
