--- a/playlist-styles.css
+++ b/playlist-styles.css
@@ -32,6 +32,8 @@ body:not(.loaded) #slider img {
     /* padding-left: 1rem; */
 }
 
+
+
 .header-container {
     display: flex;
     /* border: 2px solid black; */
@@ -68,6 +70,8 @@ body:not(.loaded) #slider img {
     margin-top: 20px;
     margin-right: 300px;
 }
+
+/*---Search section---*/
 
 .header-searchbar {
     display: flex;
@@ -155,6 +159,8 @@ body:not(.loaded) #slider img {
    
 }
 
+/*Main section starts*/
+
 main{
     width: 65%;
     display: inline-block;
@@ -172,6 +178,8 @@ aside{
     margin-left: 2%;
     width: 30%;
 }
+
+/*Similar artist title*/
 
 .similar-artists {
     overflow-y: scroll;
@@ -220,6 +228,7 @@ aside{
     font-size: 1rem;
 } */
 
+/*---Recently Played starts here---*/
 
 .recently-played{
     width: 100%;
@@ -332,6 +341,8 @@ aside{
     border: 1px solid var(--search-icon-color);
     background-color: var(--search-bg-color);
 }
+
+/*Middle section starts*/
 
 .jumbotron{
     display: flex;
@@ -500,6 +511,8 @@ footer{
     height: 5rem;
     background-color: var(--footer-bg-color);
 }
+
+
 
 .music-player{
     display: flex;
