--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -18,11 +18,14 @@
 
 
 body {
-    margin: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right:20px;
     font-family: sans-serif;
     font-size: 25px;
     color: var(--main-text-color);
     background-color: var(--main-bg-color);
+    height: 130rem;
 }
 /*--Header*/
 
@@ -133,8 +136,8 @@ body {
 main {
     width: 70%;
     display: inline-block;
-    border: 2px solid var(--main-text-color);
-    height: 138rem
+    /* border: 2px solid var(--main-text-color); */
+    height: 139rem
 }
 
 .album-container {
@@ -181,13 +184,21 @@ main {
 
 .release-container .music-container {
     display: flex;
-    margin-left: 3rem
+    margin-left: 3rem;
+    margin-bottom: 2rem;
 }
+
 
 .release-container .music-container div img {
     height: 80px;
     width: 100px;
-    pointer-events: none
+    pointer-events: none;
+    
+}
+
+.music-container div{
+    pointer-events: none;
+    
 }
 
 .release-container .music-container div span {
@@ -423,7 +434,7 @@ main {
 
 .label-tile {
     width: 16%;
-    height: 20rem;
+    height: 15rem;
     display: flex;
     flex-direction: column
 }
@@ -461,12 +472,10 @@ aside {
 /*Section header and queue animation*/
 
 #aside-section2 {
-    height: 100%
+    height: 60rem;
 }
 
-.playlist-queue-container {
-    height: 800px
-}
+
 
 .playlist-title-container {
     display: flex
@@ -544,7 +553,8 @@ aside {
 .playlist-container {
     display: flex;
     justify-content: start;
-    height: 100px
+    height: 100px;
+    margin-bottom: 1rem;
 }
 
 .playlist-container span,
@@ -580,8 +590,17 @@ img {
 .playlist-queue-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between
+    justify-content: space-between;
+    height: 400px;
+    width: 100%;
+    /* overflow-y: scroll; */
+    
+
 }
+
+/* .playlist-queue-container::-webkit-scrollbar {
+    display: none;
+} */
 
 /*Footer starts from here*/
 
@@ -675,6 +694,10 @@ footer {
 .music-toggle {
     width: 25%;
     margin-top: 35px
+}
+
+.music-toggle span{
+    font-size: 20px;
 }
 
 .page-footer {
