--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -3,7 +3,7 @@
 :root{
     --main-bg-color :#9ca3af;
     --search-bg-color:#191970;
-    --main-text-color:black;
+    --main-text-color:white;
     --search-icon-color:white;
     --queue-option-color:cornflowerblue;
     --queue-close-color:red;
@@ -13,53 +13,51 @@
     --footer-bg--color:grey;
     --queue-text-color:#7cfc00;
     --pattern-bg-color-1:orange;
+    /* --background-image: url("assets\bg-picture-2.jpg"); */
     
 }
 
 
 body {
     margin-left: 20px;
-    margin-top: 20px;
     margin-right:20px;
     font-family: sans-serif;
     font-size: 25px;
     color: var(--main-text-color);
-    background-color: var(--main-bg-color);
+    background-image: url("bg-picture-2.jpg");
     height: 130rem;
 }
 /*--Header*/
 
 #body-header {
     height: 20vh;
-    padding-top: 1.2rem
+    
 }
 
 .header-container {
     display: flex;
     height: inherit;
     width: 100%;
-    height: 80px
+    height: 80px;
+    font-size: large;
 }
 
 .header-first-container {
     display: flex;
     width: 26%;
-    align-items: center
+    align-items: center;
+    justify-content: center;
 }
 
-.header-first-container div {
-    width: 33%
+#music-player-name{
+    padding-left: 1rem;
+    text-align: justify;
+
 }
 
-.header-first-container img {
-    border-radius: 50%;
-    height: 80%;
-    width: 70%
-}
 
-.header-first-container span {
-    font-size: 25px
-}
+
+
 
 .fav-text {
     margin-top: 20px;
