--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -23,7 +23,20 @@ body {
   font-size: 25px;
   color: var(--main-text-color);
   background-image: url("bg-picture-2.jpg");
-  height: 130rem;
+
+  height: auto;
+}
+
+body::after {
+  content: "";
+  position: fixed;
+  z-index: -2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: url("bg-picture-2.jpg") no-repeat center center;
+  background-size: cover;
 }
 /*--Header*/
 
@@ -462,7 +475,7 @@ aside {
 /*Section header and queue animation*/
 
 #aside-section2 {
-  height: 60rem;
+  height: inherit;
 }
 
 .playlist-title-container {
@@ -539,7 +552,8 @@ aside {
   display: flex;
   justify-content: start;
   height: 100px;
-  margin-bottom: 1rem;
+  padding: 1rem 0;
+  margin: 1%;
 }
 
 .playlist-container span,
@@ -564,7 +578,7 @@ img {
 }
 
 .playlist-queue-container :hover {
-  box-shadow: 0 0 2px 1px var(--search-icon-color);
+  box-shadow: 0px 0px 1px 1px var(--search-icon-color);
 }
 
 .playlist-queue-container ::-webkit-scrollbar {
@@ -580,10 +594,15 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 400px;
+  overflow: scroll;
+  height: 80vh;
   width: 100%;
-  overflow-y: scroll;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
 }
+/* .playlist-queue-container :focus {
+} */
 
 .playlist-queue-container::-webkit-scrollbar {
   display: none;
