--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -129,9 +129,10 @@ body::after {
 
 .header-searchbar .profileimage img {
   height: 80px;
-  width: 80px;
+
   border-radius: 50%;
   margin-left: 60px;
+  max-width: 100%;
 }
 
 /*Main section starts from here*/
@@ -154,6 +155,7 @@ main {
 
 .album-container img {
   width: 33.3%;
+  max-width: 100%;
   height: inherit;
 }
 
@@ -189,12 +191,14 @@ main {
   display: flex;
   margin-left: 3rem;
   margin-bottom: 2rem;
+  height: 5rem;
 }
 
 .release-container .music-container div img {
   height: 80px;
   width: 100px;
   pointer-events: none;
+  max-width: 100%;
 }
 
 .music-container div {
@@ -239,19 +243,19 @@ main {
 }
 
 .artist div {
-  width: 140px;
-  height: 120px;
-  padding-left: 0.5rem;
+  width: 9rem;
+  height: 3rem;
+  margin-left: 0.5rem;
 }
 
 .artist div img {
   border-radius: 50%;
-  width: 130px;
-  height: 120px;
+  max-width: 100%;
+  width: 100%;
+  height: 6rem;
 }
 
 .artist div span {
-  padding-left: 1.5rem;
   font-size: 1rem;
 }
 
@@ -356,6 +360,7 @@ main {
   border-radius: 50%;
   width: 150px;
   height: 120px;
+  max-width: 100%;
   opacity: 0.6;
 }
 
@@ -378,6 +383,7 @@ main {
   width: inherit;
   height: inherit;
   opacity: 0.7;
+  max-width: 100%;
 }
 
 .genre-stations {
@@ -445,6 +451,7 @@ main {
 .label-tile img {
   width: 80%;
   height: 40%;
+  max-width: 100%;
 }
 
 .song-list .label-tile img:hover {
@@ -575,6 +582,7 @@ img {
   height: 4rem;
   width: 100px;
   pointer-events: none;
+  max-width: 100%;
 }
 
 .playlist-queue-container :hover {
