--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -141,6 +141,13 @@ body::after {
   margin-left: 60px;
   max-width: 100%;
 }
+/*Header ends and side menu icon starts*/
+.side-menu {
+  height: 2rem;
+  width: 100%;
+  border: 1px solid white;
+  text-align: right;
+}
 
 /*Main section starts from here*/
 
@@ -188,7 +195,7 @@ main {
 
 .release-container {
   display: flex;
-  width: 57rem;
+  width: 100%;
   height: 60vh;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -491,6 +498,10 @@ aside {
   height: 350vh;
 }
 
+#btn {
+  display: none;
+}
+
 /*Section header and queue animation*/
 
 #aside-section2 {
@@ -561,6 +572,10 @@ aside {
 }
 
 /*Scroll and playlist list*/
+
+#aside-section2 {
+  display: inline-block;
+}
 
 .playlist-title-container .child3 {
   padding: 30px 30px 30px 0;
@@ -732,4 +747,12 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
+}
+
+label[for="more"]:checked ~ input {
+  display: none;
+}
+.side-menu {
+  position: absolute;
+  right: 3rem;
 }
